fix overflow scroll

--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -27,6 +27,7 @@
   border: 1px solid orange;
   overflow-y: auto;
   flex-grow: 1;
+  height: 0px;
 }
 
 .replies {
